# gaze-tracker

./: .coverage  .dockerignore  .gitignore  ANALYTICS_LOGIC.md  BATCH_WORKERS_README.md  CONFIG_GUIDE.md  DEPLOYMENT.md  Dockerfile  FOCUS_ALGORITHM.md  FOCUS_API_README.md  LICENSE  README.md  celery_worker.py  create_dummy_data.py  demo_analytics.py  demo_dummy_data.py  demo_web_analytics.py  deployment-credentials.env  docker-compose.minimal.yml  docker-compose.prod.yml  docker-compose.yml  main.py  nginx.conf  package-lock.json  pyproject.toml  pytest.ini  redis.conf  server.py  sgdp.pem  test_comprehensive_analytics.py  test_config_parameters.py  test_inconsistency_penalties.py  test_multi_user_focus.py  test_realistic_analytics.py  utils.py
data/: focus_tracker.db
deploy/: EC2_DEPLOYMENT_GUIDE.md  SECURITY_GROUP_SETUP.md  aws-deploy.sh  azure-deploy.sh  docker-compose.ec2.yml  ec2-deploy-dockerhub.sh  ec2-deploy.sh  ec2-manage.sh  ec2-manual-setup.sh  gcp-deploy.sh
examples/: README_DEMO_CLIENTS.md  focus_client_example.py  gui_demo_client.py  web_demo_client.html
scripts/: gaze-tracker-batch-worker@.service  manage_batch_workers.sh  start_batch_worker.sh
src/: config.py  utils.py
src/api/: dependencies.py  main.py  routes.py
src/database/: database.py  models.py
src/models/: focus_schemas.py  schemas.py
src/services/: analytics_service.py  api_client.py  auth.py  batch_service.py  batch_worker.py  (+6 more)
tests/: conftest.py  test_api_pytest.py  test_celery.py  test_celery_pytest.py  test_focus_api.py  test_integration_pytest.py  test_ml_service_pytest.py
